frontend/core/src/main/webapp/static/less/icons.less
@import "foundation.less";

/*

<h1 class="main-heading">Icons</h1>

extended mind uses <a href="http://icomoon.io">Icomoon</a> to pack icons to font files. When updating the icons, make sure the character codes (e.g. "\e602") stays the same.

TODO: Icons are not working yet with Phytoplankton
*/

@size-icon-logo: 19px;
@size-icon-menu: 17px;
@size-icon-plus: 22px;
@size-icon-toggle-completed: 20px;
@size-icon-arrow-small: 11px;
@size-icon-arrow-large: 20px;
@size-icon-star: 16px;
@size-icon-star-small: 8px;

// Icon character codes
@icon-show-completed: "\e60e";
@icon-tag: "\e602";
@icon-x: "\e603";
@icon-trash: "\e604";
@icon-menu: "\e605";
@icon-plus: "\e606";
@icon-calendar: "\e607";
@icon-star: "\e608";
@icon-arrow-left: "\e609";
@icon-arrow-right: "\e60c";
@icon-arrow-move: "\e60d";
@icon-triangle-down: "\e600";
@icon-triangle-right: "\e601";
@icon-logo-only: "\e60a";
@icon-logo-with-text: "\e60b";
@icon-selection-checked: "\e60f";
@icon-selection-empty: "\e610";

@font-face {
	font-family: 'icomoon';
	src: url('../fonts/icomoon.eot');
	src: url('../fonts/icomoon.eot') format('embedded-opentype'),
  url('../fonts/icomoon.woff') format('woff'),
  url('../fonts/icomoon.ttf') format('truetype'),
  url('../fonts/icomoon.svg?') format('svg');
  font-weight: normal;
  font-style: normal;
}

.set-icon-font() {
  font-family: 'icomoon' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

